--- a/mediconnect.html
+++ b/mediconnect.html
@@ -3,15 +3,26 @@
 </head>
 
 <body>
-  <h1>Submit Users</h1>
+  <div class = "container">
+    <header>
+      <h1>Submit Users</h1>
 
-  <form class="new-user">
-    <input type="text" name="fname" placeholder="Type to add new tasks" />
-  </form>
+      <form class="new-user">
+        <input type="text" name="fname" placeholder="First name" />
+        <input type="text" name="lname" placeholder="Last name" />
+        <input type="submit" value="submit"/>
+      </form>
+    </header>
 
-  {{> body}}
+    <ul>
+      {{#each users}}
+        {{> user}}
+      {{/each}}
+    </ul>
+
+  </div>
 </body>
 
 <template name="user">
-  <li>{{text}}</li>
+  <li>{{fname}} {{lname}}</li>
 </template>
